feat: firebase_database integration
